# MACLBOS_LM_15072026_Final

./: .gitattributes  .replit  ledgerlm_bosch_all_scenarios.md  ledgerlm_test_questions.txt  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
ledgerlm/ledgerlm/: .dockerignore  .env.example  .env.gpu.example  .env.production.example  .env.vm-postgres.example  .gitattributes  .gitignore  .replit  APP_STATUS_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DOCUMENT.md  AZURE_CLOUD_SHELL_DEPLOYMENT_GUIDE.md  AZURE_DEPLOYMENT.md  BOSCH_AZURE_DEPLOYMENT_GUIDE.md  BOSCH_KPI_VALIDATION.md  CODE_REVIEW.md  COMPLETE_BEGINNER_DEPLOYMENT_GUIDE.md  COMPLETE_DEPLOYMENT_GUIDE_WITH_GITHUB.md  CUBE_SQL_WORKFLOW_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ACR_GPU.md  DEPLOYMENT_GUIDE_MATASMA_TO_BOSCH.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DEPLOYMENT_QUICK_GUIDE.md  DOCKER_DESKTOP_DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.gpu  E2E_FUNCTIONALITY_TEST_REPORT.md  KPI_MANUAL_VALIDATION_GUIDE.md  LEDGERLM_FINAL_DEPLOYMENT_GUIDE.md  LINUX_DEPLOYMENT_GUIDE.md  LedgerLM_Architecture.pptx  MATASMA_AI_SETUP_GUIDE.md  MATASMA_AZURE_DEPLOYMENT_GUIDE.md  OPEN_SOURCE_AI_DEPLOYMENT_GUIDE.md  OPEN_SOURCE_CODE_CHANGES.md  OPTION_C_IMPLEMENTATION_PLAN.md  QUICK_START_WINDOWS.md  REPLIT_TEST_REPORT.md  SCHEMA_INTELLIGENCE_GUIDE.md  (+24 more)
ledgerlm/ledgerlm/.replit-artifact/: artifact.edit.toml
ledgerlm/ledgerlm/attached_assets/: database_utils.py  rag_engine (2)_1761731748086.py
ledgerlm/ledgerlm/client/: index.html
ledgerlm/ledgerlm/python_backend/: config.py  database.py  main.py  requirements.txt  start.sh  test_100_queries.py  test_rag_flow.py  test_sql_direct.py
ledgerlm/ledgerlm/scripts/: seed-admin.sql
ledgerlm/ledgerlm/server/: db.ts  index.ts  logger.ts  openai.ts  python-backend.ts  routes.ts  seed.ts  storage.ts
(+241 files in other folders)
