[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "google-api-python-client>=2.198.0",
    "lxml>=6.1.1",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn>=0.51.0",
]
